--- a/go-client/conf/seata.yml
+++ b/go-client/conf/seata.yml
@@ -1,4 +1,4 @@
-application_id: "aggregation-svc"
+application_id: "go-client"
 transaction_service_group: "127.0.0.1:8091"
 enable-client-batch-send-request: true
 seata_version: "1.2.0"
